adding mongoose and validation
